fix the alignment of cards on expanded state, add bg color to the cards in job.html

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -70,8 +70,9 @@ h5{
 
 .bordered-list li{
     list-style:none;
-    border:1px dotted rgb(219, 213, 213);
+    border-bottom:1px solid rgb(255, 255, 255);
     padding: .5rem;
+    font-size: 1.2rem;
 }
 
 a {
@@ -217,6 +218,8 @@ h3 {
 
 .card-back {
   transform: rotateX(-180deg) translate(-100%, 0);
+  background-color: rgb(194, 237, 243);
+   
 }
 
 .cards {
@@ -256,7 +259,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  background-color: white;
+//   background-color: white;
   box-sizing: border-box;
   padding: 1rem;
   border-radius: 0.25rem;
